[package]
name = "riew"
version = "1.2.0"
edition = "2024"
authors = ["Benoît Ryder <benoit@ryder.fr>"]
license = "MIT"
description = "A minimalistic image viewer"
repository = "https://github.com/benoitryder/riew"
keywords = ["image", "image-viewer"]
categories = ["graphics"]

[dependencies]
clap = { version = "4", features = ["derive"] }
owning_ref = "0.4"

[dependencies.sdl2]
version = "0.38"
default-features = false
features = ["image", "ttf"]

